rns-lang/tests/snapshots/lexer-directives-eof_right_after_dot.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.method
.
----- STDOUT -----

----- STDERR -----
Error: lexing error
   ╭─[ test_data/integration/lexer/directives/eof_right_after_dot.ja:2:1 ]
   │
 2 │ .
   │ ┬  
   │ ╰── Unexpected end of file
   │ 
   │ Note: Expected one of the directives: .class, .super, .method, .end, .limit, .code
───╯
